--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h4 style="text-align: center;"><span style="font-family: Orbitron;"><span style="color: #444444; font-size: x-large;">Global CDN.</span></span></h4><div style="text-align: center;"><span style="color: #444444; font-family: Orbitron; font-size: x-large;"><strike><b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</b></strike></span></div><div style="text-align: center;"><span style="color: #444444;"><br /></span></div><h4 style="text-align: center;"><span style="color: #444444; font-family: Ubuntu; font-size: large;">Глобальная сеть серверов NightlyLabs обеспечивает быструю загрузку фото и видео на ваш сайт.</span></h4><h1 style="text-align: center;"><strike><span style="color: #444444; font-size: x-large;">&nbsp; &nbsp; &nbsp; &nbsp; 
+<body><h4 style="text-align: center;"><span style="font-family: Orbitron;"><span style="color: #444444; font-size: x-large;">Global CDN.</span></span></h4><div style="text-align: center;"><span style="color: #444444; font-family: Orbitron; font-size: x-large;"><strike><b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</b></strike></span></div><div style="text-align: center;"><span style="color: #444444;"><br /></span></div><h4 style="text-align: center;"><span style="color: #444444; font-family: Ubuntu; font-size: large;">Глобальная сеть серверов NightlyLabs обеспечивает быструю загрузку фото и видео на ваш сайт.</span></h4><h1 style="text-align: center;"><strike><span style="color: #444444; font-size: x-large;">&nbsp; &nbsp; &nbsp; &nbsp; 
  &nbsp; &nbsp;</span></strike></h1>
 <style>
 .custom-btn {
@@ -34,7 +34,16 @@ background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
     inset -4px -4px 6px 0 rgba(255,255,255,.2),
     inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
 }
+body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #808080;
+}
 </style>
 <div style="text-align: center;">
 <button class="custom-btn btn-2"><a href="mailto:nightlylabs@proton.me" target="_blank"><b><span style="color: white; font-family: Ubuntu; font-size: large;">Начать.</span></b></a></button></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br />
 </div>
+</body>
