--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<body><h1 style="text-align: center;"><span style="font-family: Orbitron;"><span style="color: #ffffff; font-size: x-large;">Global CDN.</span></span></h4><div style="text-align: center;"><span style="color: #ffffff; font-family: Orbitron; font-size: x-large;"><strike><b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</b></strike></span></div><div style="text-align: center;"><span style="color: #ffffff;"><br /></span></div><h2 style="text-align: center;"><span style="color: #ffffff; font-family: Ubuntu; font-size: large;">Глобальная сеть серверов NightlyLabs обеспечивает быструю загрузку фото и видео на ваш сайт.</span></h4><h1 style="text-align: center;"><strike><span style="color: #ffffff; font-size: x-large;">&nbsp; &nbsp; &nbsp; &nbsp; 
- &nbsp; &nbsp;</span></strike></h1>
+<body><h1 style="text-align: center;"><span style="font-family: Orbitron;"><span style="color: #ffffff; font-size: x-large;">Global CDN.</span></span></h4><div style="text-align: center;"><span style="color: #ffffff; font-family: Orbitron; font-size: x-large;"><strike><b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</b></strike></span></div><div style="text-align: center;"><span style="color: #ffffff;"><br /></span></div><h2 style="text-align: center;"><span style="color: #ffffff; font-family: Ubuntu; font-size: large;">Глобальная сеть серверов NightlyLabs обеспечивает быструю загрузку фото и видео на ваш сайт.</span></h4><h1 style="text-align: center;"></h1>
 <style>
 .custom-btn {
   width: 130px;
@@ -35,12 +34,7 @@ background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
     inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
 }
 body {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #808080;
+  background-color: #000000;
 }
 </style>
 <div style="text-align: center;">
