--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>Thanks, dear GitHub!!!</title>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"><style> @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap'); </style>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap" rel="stylesheet"><style> @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap'); </style>
 <hr>
