--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
     inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
 }
 body {
-  background-color: #000000;
+  background-color: #3c3c3c;
+  github-is-best?: yes;
 }
 <hr>
 </style>
