--- a/index.html
+++ b/index.html
@@ -4,46 +4,12 @@
 <hr>
 <body><h1 style="text-align: center;"><span style="font-family: Orbitron;"><span style="color: #ffffff; font-size: x-large;"><big><big><big><big><big><big><big>Global CDN.</big></big></big></big></big></big></big></span></span></h4><div style="text-align: center;"><span style="color: #ffffff; font-family: Orbitron; font-size: x-large;"><strike><b><big><big><big><big><big><big><big>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</big></big></big></big></big></big></big></b></strike></span></div></div><h2 style="text-align: center;"><span style="color: #ffffff; font-family: Ubuntu; font-size: large;"><big><big><big><big><big>Глобальная сеть серверов NightlyLabs обеспечивает быструю загрузку фото и видео на ваш сайт.</big></big></big></big></big></span></h4><h1 style="text-align: center;"></h1>
 <style>
-.custom-btn {
-  width: 130px;
-  height: 40px;
-  border-radius: 5px;
-  padding: 10px 25px;
-  font-family: 'Lato', sans-serif;
-  font-weight: 500;
-  background: transparent;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  position: relative;
-  display: inline-block;
-   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-   7px 7px 20px 0px rgba(0,0,0,.1),
-   4px 4px 5px 0px rgba(0,0,0,.1);
-  outline: none;
-}
-.btn-2 {
-  background: rgb(96,9,240);
-background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
-  border: none;
-  
-}
-.btn-2:before {
-  height: 0%;
-  width: 2px;
-}
-.btn-2:hover {
-  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-              -4px -4px 6px 0 rgba(116, 125, 136, .5), 
-    inset -4px -4px 6px 0 rgba(255,255,255,.2),
-    inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
-}
 body {
   background-color: #3c3c3c;
   github-is-best?: yes;
 }
 <hr>
-</style>
-<div style="text-align: center;">
-<button class="custom-btn btn-2"><a href="mailto:nightlylabs@proton.me" target="_blank"><b><span style="color: white; font-family: Ubuntu; font-size: large;">Начать.</span></b></a></button></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br /></div><div style="text-align: center;"><br />
-</div>
+<hr />
+<p style="text-align: center;"><a href="mailto:nightlylabs@proton.me"><span style="color: #f3f3f3; font-family: Ubuntu; font-size: x-large;">Начать.</span></a></p>
+<hr />
 </body>
