--- a/index.html
+++ b/index.html
@@ -13,3 +13,9 @@ body {
 <p style="text-align: center;"><a href="mailto:nightlylabs@proton.me"><span style="color: #f3f3f3; font-family: Ubuntu; font-size: x-large;">Начать.</span></a></p>
 <hr />
 </body>
+<hr>
+<p>&nbsp;Пример фото :</p><p><br /></p>
+<img src="https://ncdn.gq/testpictures/bicycle.png" alt="example"><style>img {
+    border-radius: 1%;
+}</style>
+<hr>
