--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ body {
 <p style="text-align: center;"><a href="mailto:nightlylabs@proton.me"><span style="color: #f3f3f3; font-family: Ubuntu; font-size: x-large;">Начать.</span></a></p>
 <hr />
 <hr>
-<p>&nbsp;Пример фото :</p><p><br /></p>
-<img src="https://ncdn.gq/testpictures/bicycle.png" alt="example"><style>img {
+<p style="text-align: center;"><span style="font-family: Play; font-size: large;">&nbsp;Пример фото :</span></p>
+<div style="text-align: center;"><span style="font-family: Play; font-size: large;"><img alt="example" height="400" src="https://ncdn.gq/testpictures/bicycle.png" width="194" /></span></div><span style="font-family: Play; font-size: large;"><style>img {
     border-radius: 1%;
-}</style>
+}</style></span><div style="text-align: center;"><span style="font-family: Play; font-size: large;">&nbsp;Bicycle.png</span></div>
 <hr>
 </body>
