--- a/example.html
+++ b/example.html
@@ -1,4 +1,4 @@
-<p>&nbsp;Пример фото :</p><p><br /></p>
-<img src="https://ncdn.gq/testpictures/bicycle.png" alt="example"><style>img {
+<p style="text-align: center;"><span style="font-family: Play; font-size: large;">&nbsp;Пример фото :</span></p>
+<div style="text-align: center;"><span style="font-family: Play; font-size: large;"><img alt="example" height="400" src="https://ncdn.gq/testpictures/bicycle.png" width="194" /></span></div><span style="font-family: Play; font-size: large;"><style>img {
     border-radius: 1%;
-}</style>
+}</style></span><div style="text-align: center;"><span style="font-family: Play; font-size: large;">&nbsp;Bicycle.png (X©)</span></div>
