--- a/example.html
+++ b/example.html
@@ -1,4 +1,6 @@
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+<style> @import url('https://fonts.googleapis.com/css2?family=Play&display=swap'); </style>
 <p style="text-align: center;"><span style="font-family: Play; font-size: large;">&nbsp;Пример фото :</span></p>
 <div style="text-align: center;"><span style="font-family: Play; font-size: large;"><img alt="example" height="400" src="https://ncdn.gq/testpictures/bicycle.png" width="194" /></span></div><span style="font-family: Play; font-size: large;"><style>img {
-    border-radius: 1%;
+    border-radius: 2%;
 }</style></span><div style="text-align: center;"><span style="font-family: Play; font-size: large;">&nbsp;Bicycle.png (X©)</span></div>
