--- a/index.html
+++ b/index.html
@@ -13,4 +13,8 @@ body {
 <p style="text-align: center;"><a href="mailto:nightlylabs@proton.me"><span style="color: #f3f3f3; font-family: Ubuntu; font-size: x-large;">Начать.</span></a></p>
 
 </body>
-<new><html><head><style>.radius{background:#f0f0f0;border:1px solid #000;padding:15px;margin-bottom:10px}</style></head><body><div style="border-radius:8px" class="radius">Text here.</div></body></html>
+<new><html><head><style>.radius{
+background:#f0f0f0;
+border:1px solid #000;
+padding:15px;
+margin-bottom:10px}</style></head><body><div style="border-radius:8px" class="radius">Text here.</div></body></html>
