--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ body {
  <head> 
   <style>
    .radius {
-    background: #f0f0f0; /* Цвет фона */
-    border: 1px solid black; /* Параметры рамки */
-    padding: 15px; /* Поля вокруг текста */
-    margin-bottom: 10px; /* Отступ снизу */
+    background: #808080;
+    border: 3px solid black; 
+    padding: 15px;
+    margin-bottom: 10px; 
    }
   </style> 
  </head> 
