--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
    }
   </style> 
   <div style="border-radius: 8px;" class="radius">
-    Также поддерживает no-end скрипты!. 
+    Также поддерживает no-end скрипты! 
   </div> 
  </body>
 </html>
