--- a/index.html
+++ b/index.html
@@ -1,30 +1,1 @@
-<title>Thanks, dear GH!!!</title>
-<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"><style> @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap'); </style>
-<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap" rel="stylesheet"><style> @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap'); </style>
-<hr>
-<body><h1 style="text-align: center;"><span style="font-family: Orbitron;"><span style="color: #ffffff; font-size: x-large;"><big><big><big><big><big><big><big>Global CDN.</big></big></big></big></big></big></big></span></span></h4><div style="text-align: center;"><span style="color: #ffffff; font-family: Orbitron; font-size: x-large;"><strike><b><big><big><big><big><big><big><big>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</big></big></big></big></big></big></big></b></strike></span></div></div><h2 style="text-align: center;"><span style="color: #ffffff; font-family: Ubuntu; font-size: large;"><big><big><big><big><big>Глобальная сеть серверов NightlyLabs обеспечивает быструю загрузку фото и видео на ваш сайт.</big></big></big></big></big></span></h4><h1 style="text-align: center;"></h1>
-<style>
-body {
-  background-color: #3c3c3c;
-  github-is-best?: yes;
-}
-<hr>
-<hr />
-<p style="text-align: center;"><a href="mailto:nightlylabs@proton.me"><span style="color: #f3f3f3; font-family: Ubuntu; font-size: x-large;">Начать.</span></a></p>
-
-
-
-  <style>
-   .radius {
-    background: #808080;
-    border: 3px solid black; 
-    padding: 15px;
-    margin-bottom: 10px; 
-   }
-  </style> 
-  <div style="border-radius: 8px;" class="radius">
-     
-  </div> 
- </body>
-</html>
-</head>
+<title>Thanks.</title><link href=https://fonts.googleapis.com rel=preconnect><link href=https://fonts.gstatic.com rel=preconnect crossorigin><link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap"rel=stylesheet><style>@import url(https://fonts.googleapis.com/css2?family=Ubuntu&display=swap);</style><link href=https://fonts.googleapis.com rel=preconnect><link href=https://fonts.gstatic.com rel=preconnect crossorigin><link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap"rel=stylesheet><style>@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&display=swap');</style><hr><h1 style=text-align:center><span style=font-family:Orbitron><span style=color:#fff;font-size:x-large><big><big><big><big><big><big><big>Global CDN.</big></big></big></big></big></big></big></span></span><div style=text-align:center><span style=color:#fff;font-family:Orbitron;font-size:x-large><strike><b><big><big><big><big><big><big><big></big></big></big></big></big></big></big></b></strike></span></div><h2 style=text-align:center><span style=color:#fff;font-family:Ubuntu;font-size:large><big><big><big><big><big>Глобальная сеть серверов NightlyLabs обеспечивает быструю загрузку фото и видео на ваш сайт.</big></big></big></big></big></span><h1 style=text-align:center></h1><style>body{background-color:#3c3c3c;github-is-best?:yes}</style><hr><hr>
